test/libsolidity/syntaxTests/nameAndTypeResolution/interface_enums.sol
interface I {
    enum A { B, C }
}
// ----
// TypeError: (18-33): Enumerable cannot be declared in interfaces.
